--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ Day-2/
 # All powerpoints excluded
 *.pptx
 
+# All docs renamed to docs_orig
+*.docx_orig
+
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
